# Blueprint

./: .clinerules  .gitignore  README.md  install_postgres.md  pyproject.toml
bash_script/: setup_structure.sh
config/: main.yaml
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
