[project]
name = "ml-project"
version = "0.1.0"
description = "ML project template with standard dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    
    # LLM & Prompting
    "dspy-ai>=2.0.0",
    
    # Data Processing
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "plotnine>=0.12.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    
    # AWS & Cloud
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# Development tools (cross-platform)
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

# GPU inference (Linux with NVIDIA GPU only)
gpu = [
    "vllm>=0.4.0",
]

# RAG with pgvector (optional)
rag = [
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",      # PostgreSQL driver
    "sentence-transformers>=2.2.0", # Embedding models
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
